# SDL_MandelbrotSet

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake
includes/: Fractal.h  Mandelbrot.h  RGB.h  Screen.h  Zoom.h  ZoomList.h
src/: Fractal.cpp  Mandelbrot.cpp  RGB.cpp  Screen.cpp  ZoomList.cpp
